syntax = "proto3";

option csharp_namespace = "BaggageDemo.GrpcApi";

package baggage;

// Service for processing requests with baggage context
service BaggageProcessor {
  // Process an order with baggage context
  rpc ProcessOrder (OrderRequest) returns (OrderReply);
}

// Request message
message OrderRequest {
  string order_id = 1;
  string customer_name = 2;
  double amount = 3;
}

// Response message
message OrderReply {
  string message = 1;
  string processed_by = 2;
}
